# game_of_life

./: CMakeLists.txt  README.md
src/: main.c
src/graphics/: CMakeLists.txt  windows.c  windows.h
